Added arrival aviability scorecontract and endpoint
